--- a/frontend/pages/Page1.html
+++ b/frontend/pages/Page1.html
@@ -18,10 +18,16 @@
           <div class="message-rectangle"></div>
           <div class="text-wrapper">Message...</div>
           <img class="boot" src="{{ url_for('static', filename='img/boot.png') }}" />
-          <div class="lectures-rectangle"></div>
-          <div class="text-wrapper-2">LECTURES</div>
-          <img class="polygon" src="{{ url_for('static', filename='img/polygon-1.svg') }}" />
-          <div class="hello">
+          <div class="lectures-rectangle">
+            <select class="lectures-dropdown">
+                <option value="lecture1">Lecture 1</option>
+                <option value="lecture2">Lecture 2</option>
+                <option value="lecture3">Lecture 3</option>
+                <!-- Add more options as needed -->
+            </select>
+            <div class="text-wrapper-2">LECTURES</div>
+          </div>
+            <div class="hello">
             <div class="overlap-group">
               <img class="XMLID" src="{{ url_for('static', filename='img/xmlid-354-1.svg') }}" />
               <div class="overlap-group-2">
