--- a/frontend/pages/summary.html
+++ b/frontend/pages/summary.html
@@ -39,7 +39,7 @@
             <div class="rectangle-5"></div>
             <div class="text-wrapper-5">QUIZ</div>
           </a>
-          <img class="group" src="{{ url_for('static', filename='img/group-1.png') }}" />
+          <img class="group" src="{{ url_for('static', filename='img/group.png') }}" />
           <div class="overlap-group-wrapper">
             <div class="overlap-group"><div class="ellipse-4"></div></div>
           </div>
