--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -18,7 +18,7 @@
           <div class="text-wrapper">CHATBOT</div>
           <p class="ONLINE"><span class="span">ONLINE</span> <span class="text-wrapper-2">&nbsp;</span></p>
           <img class="boot" src="{{ url_for('static', filename='img/boot.png') }}" alt="Boot Image">
-          <a href="{{ url_for('chatbot') }}" class="start-link">
+          <a href="{{ url_for('chat') }}" class="start-link">
             <div class="start">
               <div class="overlap-group">
                 <div class="text-wrapper-3">START</div>
