--- a/frontend/pages/summary.html
+++ b/frontend/pages/summary.html
@@ -25,7 +25,7 @@
           <img class="fill" src="{{ url_for('static', filename='img/fill-4.svg') }}" />
           <img class="video" src="{{ url_for('static', filename='img/video.svg') }}" />
           <!-- Chatbot Button -->
-          <a href="{{ url_for('chatbot') }}" class="button-link">
+          <a href="{{ url_for('chat') }}" class="button-link">
             <img class="img" src="{{ url_for('static', filename='img/rectangle-10.svg') }}" />
             <div class="text-wrapper-3">CHATBOT</div>
           </a>
