--- a/frontend/pages/Page1.html
+++ b/frontend/pages/Page1.html
@@ -39,30 +39,10 @@
               <button type="submit" style="display: none;">Send</button>
           </form>
           </div>
-          <img class="boot" src="{{ url_for('static', filename='img/boot.png') }}" />
-            <div class="hello">
-            <div class="overlap-group">
-              <img class="XMLID" src="{{ url_for('static', filename='img/xmlid-354-1.svg') }}" />
-              <div class="overlap-group-2">
-                <div class="rectangle-4"></div>
-                <p class="p">Hello! How can I assist you?</p>
-                <div class="ellipse-4"></div>
-              </div>
-            </div>
-          </div>
-          <div class="hi">
-            <div class="overlap-2">
-              <img class="img" src="{{ url_for('static', filename='img/xmlid-354.svg') }}" />
-              <div class="rectangle-5"></div>
-              <div class="text-wrapper-3">Hi</div>
-            </div>
-          </div>
           <img class="iconly-bulk-send" src="{{ url_for('static', filename='img/iconly-bulk-send.png') }}" />
           <img class="fill" src="{{ url_for('static', filename='img/fill-4.svg') }}" />
-          <img class="video" src="{{ url_for('static', filename='img/video.svg') }}" />
-          <img class="group" src="{{ url_for('static', filename='img/group-1.png') }}" />
           <!-- Chatbot Button -->
-          <a href="{{ url_for('chatbot') }}" class="button-link">
+          <a href="{{ url_for('chat') }}" class="button-link">
             <div class="rectangle-6"></div>
             <div class="text-wrapper-4">CHATBOT</div>
           </a>
@@ -80,7 +60,6 @@
           <div class="overlap-group-wrapper">
             <div class="ellipse-wrapper"><div class="ellipse-5"></div></div>
           </div>
-          <img class="group-3" src="{{ url_for('static', filename='img/group-14.png') }}" />
         </div>
       </div>
     </div>
@@ -100,16 +79,44 @@
           selectedLectureSpan.style.display = "none"; // Hide the selected text
         }
       }
-      document.getElementById('chat-form').addEventListener('submit', function(event) {
-        event.preventDefault();
-        console.log("Form submitted"); // Debugging line
-        var userInput = document.getElementById('chat-input').value;
-        console.log("User input:", userInput); // Debugging line
-        if (userInput.trim() !== '') {
-          // sendMessage(userInput);
-          document.getElementById('chat-input').value = ''; // Clear the input after sending
+      function displayMessage(message, sender) {
+        var chatMessagesContainer = document.getElementById('chat-messages-container');
+        var messageElement = document.createElement('div');
+        messageElement.textContent = message;
+        messageElement.classList.add('chat-message');
+
+        if (sender === 'user') {
+          messageElement.classList.add('user-message');
+        } else {
+          messageElement.classList.add('bot-message');
         }
-      });
+
+        chatMessagesContainer.appendChild(messageElement);
+        // Scroll to the bottom of the chat container to show the latest message
+        chatMessagesContainer.scrollTop = chatMessagesContainer.scrollHeight;
+      }
+
+  document.getElementById('chat-form').addEventListener('submit', function(event) {
+    event.preventDefault();
+    var userInput = document.getElementById('chat-input').value;
+    
+    if (userInput.trim() !== '') {
+      displayMessage(userInput, 'user'); // Display user message on the front end
+      fetch('/chatbot', {
+        method: 'POST',
+        body: JSON.stringify({ message: userInput }),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      })
+      .then(response => response.json())
+      .then(data => {
+        displayMessage(data.reply, 'bot'); // Display bot message on the front end
+        document.getElementById('chat-input').value = ''; // Clear the input after sending
+      })
+      .catch(error => console.error('Error:', error));
+    }
+  });
   </script>
   </body>
 </html>
