--- a/frontend/pages/quiz.html
+++ b/frontend/pages/quiz.html
@@ -26,7 +26,7 @@
           <div class="text-wrapper-3">SUMMARY</div>
           <div class="text-wrapper-4">QUIZ</div>
           <!-- Chatbot Button -->
-          <a href="{{ url_for('chatbot') }}" class="button-link">
+          <a href="{{ url_for('chat') }}" class="button-link">
             <div class="rectangle-4"></div>
             <div class="text-wrapper-2">CHATBOT</div>
           </a>
