--- a/frontend/pages/summary.html
+++ b/frontend/pages/summary.html
@@ -29,7 +29,10 @@
             <img class="polygon" src="{{ url_for('static', filename='img/polygon-1.svg') }}" />
           </div>
           <div class="rectangle-3">
-            <span id="rectangle-3-content"></span> <!-- This element will display the output -->
+            <span id="rectangle-3-content">Please choose a lecture</span> <!-- This element will display the output -->
+            <div class="loader-container">
+              <div class="loader" style="display: none;"></div> <!-- Loader initially hidden -->
+            </div>
           </div>
           <!-- Chatbot Button -->
           <a href="{{ url_for('chat') }}" class="button-link">
@@ -55,6 +58,8 @@
     </div>
     <script>
       function updateSelectedLecture() {
+        document.getElementById('rectangle-3-content').innerText = ''
+        displayLoading(true); // Show loader
         var dropdown = document.getElementById("lecturesDropdown");
         var selectedOption = dropdown.value;
         document.getElementById("selectedLecture").innerText = selectedOption;
@@ -66,26 +71,36 @@
           label.style.display = "none"; // Hide the "LECTURES" text
           selectedLectureSpan.textContent = selectedText; // Set the selected text
           selectedLectureSpan.style.display = "block"; // Show the selected text
+          fetch('/lecture_summary', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ lecture: selectedOption })
+          })
+          .then(response => response.text())
+          .then(data => {
+            console.log('Success:', data);
+            displayLoading(false); // Hide loader
+            document.getElementById('rectangle-3-content').innerText = data; // Update the rectangle-3 content
+          })
+          .catch((error) => {
+            displayLoading(false); // Hide loader
+            console.error('Error:', error);
+          });
         } else {
           label.style.display = "block"; // Show the "LECTURES" text
           selectedLectureSpan.style.display = "none"; // Hide the selected text
+          rectangleContent.innerText = "Please choose a lecture"; // Remind the user to select a lecture
         }
-        fetch('/lecture_summary', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ lecture: selectedOption })
-      })
-      .then(response => response.text())
-      .then(data => {
-        console.log('Success:', data);
-        document.getElementById('rectangle-3-content').innerText = data; // Update the rectangle-3 content
-      })
-      .catch((error) => {
-        console.error('Error:', error);
-      });
       }
-  </script>
+      function displayLoading(show) {
+        console.log('Displaying loader:', show);
+        var loader = document.querySelector('.loader');
+        if (loader) {
+          loader.style.display = show ? 'block' : 'none';
+        }
+      }
+    </script>
   </body>
 </html>
