--- a/frontend/pages/quiz.html
+++ b/frontend/pages/quiz.html
@@ -15,16 +15,23 @@
           <div class="rectangle"></div>
           <div class="rectangle-2"></div>
           <div class="rectangle-3"></div>
-          <img class="boot" src="{{ url_for('static', filename='img/boot.png') }}" />
-          <div class="lectures-rectangle"></div>
-          <div class="text-wrapper">LECTURES</div>
-          <img class="polygon" src="{{ url_for('static', filename='img/polygon-1.png') }}" />
+          <div class="lectures-rectangle">
+            <select class="lectures-dropdown" id="lecturesDropdown" onchange="updateSelectedLecture()">
+              <option value="" disabled selected>Select your option</option>
+              <option value="Calloc vs malloc">Calloc vs malloc</option>
+              <option value="Decimal to Binary Conversion">Decimal to Binary Conversion</option>
+              <option value="Pointers in C Basic">Pointers in C Basic</option>
+              <!-- Add more options as needed -->
+            </select>
+            <div class="text-wrapper">
+              <span id="lecturesLabel">Choose a Lecture...</span>
+              <span id="selectedLecture" style="display: none;"></span> <!-- Initially hidden -->
+            </div>
+            <img class="polygon" src="{{ url_for('static', filename='img/polygon-1.svg') }}" />
+          </div>
           <div class="rectangle-4"></div>
           <div class="rectangle-5"></div>
           <img class="img" src="{{ url_for('static', filename='img/rectangle-12.svg') }}" />
-          <div class="text-wrapper-2">CHATBOT</div>
-          <div class="text-wrapper-3">SUMMARY</div>
-          <div class="text-wrapper-4">QUIZ</div>
           <!-- Chatbot Button -->
           <a href="{{ url_for('chat') }}" class="button-link">
             <div class="rectangle-4"></div>
@@ -50,7 +57,6 @@
           <div class="text-wrapper-5">Question 1 :</div>
           <div class="text-wrapper-6">Question 2 :</div>
           <div class="text-wrapper-7">Question 3 :</div>
-          <div class="ellipse-5"></div>
           <div class="ellipse-6"></div>
           <div class="ellipse-7"></div>
           <div class="ellipse-8"></div>
@@ -63,5 +69,48 @@
         </div>
       </div>
     </div>
+    <script>
+            function updateSelectedLecture() {
+        displayLoading(true); // Show loader
+        var dropdown = document.getElementById("lecturesDropdown");
+        var selectedOption = dropdown.value;
+        document.getElementById("selectedLecture").innerText = selectedOption;
+        var selectedText = dropdown.options[dropdown.selectedIndex].text;
+        var label = document.getElementById("lecturesLabel");
+        var selectedLectureSpan = document.getElementById("selectedLecture");
+        // If the selected option is not the placeholder
+        if(dropdown.selectedIndex > 0) {
+          label.style.display = "none"; // Hide the "LECTURES" text
+          selectedLectureSpan.textContent = selectedText; // Set the selected text
+          selectedLectureSpan.style.display = "block"; // Show the selected text
+          fetch('/lecture_quiz', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ lecture: selectedOption })
+          })
+          .then(response => response.text())
+          .then(data => {
+            console.log('Success:', data);
+            displayLoading(false); // Hide loader
+          })
+          .catch((error) => {
+            displayLoading(false); // Hide loader
+            console.error('Error:', error);
+          });
+        } else {
+          label.style.display = "block"; // Show the "LECTURES" text
+          selectedLectureSpan.style.display = "none"; // Hide the selected text
+        }
+      }
+      function displayLoading(show) {
+        console.log('Displaying loader:', show);
+        var loader = document.querySelector('.loader');
+        if (loader) {
+          loader.style.display = show ? 'block' : 'none';
+        }
+      }
+    </script>
   </body>
 </html>
