--- a/frontend/pages/Page1.html
+++ b/frontend/pages/Page1.html
@@ -84,7 +84,7 @@
           selectedLectureSpan.style.display = "none"; // Hide the selected text
           chatInput.disabled = false;
         }
-        fetch('/lecture_cahtbot', {
+        fetch('/lecture_chatbot', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
