ready for testing

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -30,9 +30,35 @@
                     <div class="frame">
                         <select class="lectures-dropdown" id="lecturesDropdown" onchange="updateSelectedLecture()">
                             <option value="" disabled selected>Select your option</option>
-                            <option value="Calloc vs malloc">Calloc vs malloc</option>
-                            <option value="Decimal to Binary Conversion">Decimal to Binary Conversion</option>
-                            <option value="Pointers in C Basic">Pointers in C Basic</option>
+                            <!-- <option value="Decimal to Binary Conversion _ GeeksforGeeks">Decimal to Binary Conversion</option> -->
+                            <!-- <option value="Binary to Decimal Conversion _ GeeksforGeeks">Binary to Decimal Conversion</option> -->
+                            <option value="Decimal to Octal Conversion _ GeeksforGeeks">Decimal to Octal Conversion</option>
+                            <option value="Octal to Decimal Conversion _ GeeksforGeeks">Octal to Decimal Conversion</option>
+                            <option value="Decimal to Hexadecimal Conversion _ GeeksforGeeks">Decimal to Hexadecimal Conversion</option>
+                            <!-- <option value="Hexadecimal to Decimal Conversion _ GeeksforGeeks">Hexadecimal to Decimal Conversion</option> -->
+                            <option value="Pointers in C Basic _ GeeksforGeeks">Pointers in C Basic</option>
+                            <option value="Double Pointer (Pointer to Pointer) in C _ GeeksforGeeks">Double Pointer (Pointer to Pointer) in C</option>
+                            <!-- <option value="Dereference, Reference _ GeeksforGeeks">Dereference, Reference</option> -->
+                            <!-- <option value="Why C treats array parameters as pointers">Why C treats array parameters as pointers</option> -->
+                            <!-- <option value="Dangling, Void , Null and Wild Pointers _ GeeksforGeeks">Dangling, Void , Null and Wild Pointers</option> -->
+                            <option value="How to declare a pointer to a function">How to declare a pointer to a function</option>
+                            <!-- <option value="An Uncommon representation of array elements">An Uncommon representation of array elements</option> -->
+                            <!-- <option value="Functions that are executed before and after main() in C _ GeeksforGeeks">Functions that are executed before and after main() in C</option> -->
+                            <option value="Functions in C _ C   _ GeeksforGeeks">Functions in C </option>
+                            <!-- <option value="restrict keyword in C (C Programming) _ GeeksforGeeks">restrict keyword in C (C Programming)</option> -->
+                            <option value="Void Pointer in C _ GeeksforGeeks">Void Pointer in C</option>
+                            <option value="How does free() know the size of memory to be deallocated">How does free() know the size of memory to be deallocated</option>
+                            <!-- <option value="Understanding “register” keyword in C _ GeeksforGeeks">Understanding “register” keyword in C</option> -->
+                            <!-- <option value="What is evaluation order of function parameters in C">What is evaluation order of function parameters in C</option> -->
+                            <!-- <option value="Use of realloc _ GeeksforGeeks">Use of realloc</option> -->
+                            <!-- <option value="Structure Member Alighnment and Padding (Part 3) _ GeeksforGeeks">Structure Member Alighnment and Padding (Part 2)</option> -->
+                            <option value="Structure Member Alighnment and Padding (Part 1) _ GeeksforGeeks">Structure Member Alighnment and Padding (Part 1)</option>
+                            <option value="Structures in C _ GeeksforGeeks">Structures in C</option>
+                            <option value="Calloc vs malloc _ GeeksforGeeks">Calloc vs malloc</option>
+                            <option value="Pointer vs Array (C Programming) _ GeeksforGeeks">Pointer vs Array (C Programming)</option>
+                            <option value="How to deallocate memory without using free() in C">How to deallocate memory without using free() in C</option>
+                            <!-- <option value="Minimum Cost Path Problem _ GeeksforGeeks">Minimum Cost Path Problem</option>
+                            <option value="Variables (Core Java) _ GeeksforGeeks">Variables (Core Java)</option> -->
                         </select>
                         <div class="text-wrapper-12">
                             <span id="lecturesLabel">Choose a Lecture...</span>
