--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -42,7 +42,7 @@
         You will discover the world of intelligent dialogue and start your
         wonderful journey today
       </div>
-      <a href="{{ url_for('chat') }}" class="start-link">
+      <a href="{{ url_for('summary') }}" class="start-link">
       <div class="button">
         <div class="bg"></div>
         <b class="get-started" id="getStartedText1">Get Started</b>
