--- a/frontend/pages/quiz.html
+++ b/frontend/pages/quiz.html
@@ -10,7 +10,8 @@
         <div class="overlap">
           <div class="text-wrapper">Welcome</div>
           <img class="group" src="{{ url_for('static', filename='img1/group.png') }}" />
-          <img class="vector" src="{{ url_for('static', filename='img1/vector-4.svg') }}" />
+          <a href="{{ url_for('home') }}" class="button-link">
+          <img class="vector" src="{{ url_for('static', filename='img1/vector-4.svg') }}" /></a>
           <div class="list-menu">
             <a href="{{ url_for('summary') }}" class="button-link">
                 <div class="overlap-group"><div class="text-wrapper-2">Summary</div></div>
@@ -22,7 +23,9 @@
             <div class="overlap-2"><div class="text-wrapper-4">Chatbot</div></div>
           </a>
           </div>
+          <a href="{{ url_for('home') }}" class="button-link">
           <div class="text-wrapper-5">Exit</div>
+          </a>
         </div>
         <div class="overlap-3">
           <div class="overlap-4">
