--- a/frontend/pages/chatbot_upload.html
+++ b/frontend/pages/chatbot_upload.html
@@ -36,43 +36,9 @@
                         </label>
                     </form>
                     <div class="frame">
-                        <select class="lectures-dropdown" id="lecturesDropdown" onchange="updateSelectedLecture()">
-                            <option value="" disabled selected>Select your option</option>
-                            <!-- <option value="Decimal to Binary Conversion _ GeeksforGeeks">Decimal to Binary Conversion</option> -->
-                            <!-- <option value="Binary to Decimal Conversion _ GeeksforGeeks">Binary to Decimal Conversion</option> -->
-                            <option value="Decimal to Octal Conversion _ GeeksforGeeks">Decimal to Octal Conversion</option>
-                            <option value="Octal to Decimal Conversion _ GeeksforGeeks">Octal to Decimal Conversion</option>
-                            <option value="Decimal to Hexadecimal Conversion _ GeeksforGeeks">Decimal to Hexadecimal Conversion</option>
-                            <!-- <option value="Hexadecimal to Decimal Conversion _ GeeksforGeeks">Hexadecimal to Decimal Conversion</option> -->
-                            <option value="Pointers in C Basic _ GeeksforGeeks">Pointers in C Basic</option>
-                            <option value="Double Pointer (Pointer to Pointer) in C _ GeeksforGeeks">Double Pointer (Pointer to Pointer) in C</option>
-                            <!-- <option value="Dereference, Reference _ GeeksforGeeks">Dereference, Reference</option> -->
-                            <!-- <option value="Why C treats array parameters as pointers">Why C treats array parameters as pointers</option> -->
-                            <!-- <option value="Dangling, Void , Null and Wild Pointers _ GeeksforGeeks">Dangling, Void , Null and Wild Pointers</option> -->
-                            <option value="How to declare a pointer to a function">How to declare a pointer to a function</option>
-                            <!-- <option value="An Uncommon representation of array elements">An Uncommon representation of array elements</option> -->
-                            <!-- <option value="Functions that are executed before and after main() in C _ GeeksforGeeks">Functions that are executed before and after main() in C</option> -->
-                            <option value="Functions in C _ C   _ GeeksforGeeks">Functions in C </option>
-                            <!-- <option value="restrict keyword in C (C Programming) _ GeeksforGeeks">restrict keyword in C (C Programming)</option> -->
-                            <option value="Void Pointer in C _ GeeksforGeeks">Void Pointer in C</option>
-                            <option value="How does free() know the size of memory to be deallocated">How does free() know the size of memory to be deallocated</option>
-                            <!-- <option value="Understanding “register” keyword in C _ GeeksforGeeks">Understanding “register” keyword in C</option> -->
-                            <!-- <option value="What is evaluation order of function parameters in C">What is evaluation order of function parameters in C</option> -->
-                            <!-- <option value="Use of realloc _ GeeksforGeeks">Use of realloc</option> -->
-                            <!-- <option value="Structure Member Alighnment and Padding (Part 3) _ GeeksforGeeks">Structure Member Alighnment and Padding (Part 2)</option> -->
-                            <option value="Structure Member Alighnment and Padding (Part 1) _ GeeksforGeeks">Structure Member Alighnment and Padding (Part 1)</option>
-                            <option value="Structures in C _ GeeksforGeeks">Structures in C</option>
-                            <option value="Calloc vs malloc _ GeeksforGeeks">Calloc vs malloc</option>
-                            <option value="Pointer vs Array (C Programming) _ GeeksforGeeks">Pointer vs Array (C Programming)</option>
-                            <option value="How to deallocate memory without using free() in C">How to deallocate memory without using free() in C</option>
-                            <!-- <option value="Minimum Cost Path Problem _ GeeksforGeeks">Minimum Cost Path Problem</option>
-                            <option value="Variables (Core Java) _ GeeksforGeeks">Variables (Core Java)</option> -->
-                        </select>
                         <div class="text-wrapper-12">
-                            <span id="lecturesLabel">Choose a Lecture...</span>
-                            <span id="selectedLecture" style="display: none;"></span> <!-- Initially hidden -->
+                            <span id="lecturesLabel">Chooaase a Lecture...</span>
                         </div>
-                        <img class="img" src="{{ url_for('static', filename='img1/vector-5.svg') }}" />
                     </div>
                     <div class="text-wrapper-8">Chatbot</div>
                 </div>
@@ -80,7 +46,7 @@
                 <div class="overlap-3">
                     <div class="frame-3">
                         <form id="chat-form">
-                            <input type="text" id="chat-input" placeholder="Type your message here..." autocomplete="off" disabled>
+                            <input type="text" id="chat-input" placeholder="Type your message here..." autocomplete="off">
                         </form>
                         <img class="vector-3" src="{{ url_for('static', filename='img1/vector-3.svg') }} "onclick="submitChatForm()" />
                         <img class="fill-2" src="{{ url_for('static', filename='img1/fill-4.svg') }}" onclick="clearChatMessages()"/>
@@ -102,40 +68,6 @@
         <script>
             function submitForm() {
                 document.getElementById("uploadForm").submit();
-            }
-            function updateSelectedLecture() {
-                var dropdown = document.getElementById("lecturesDropdown");
-                var selectedOption = dropdown.value;
-                document.getElementById("selectedLecture").innerText = selectedOption;
-                var selectedText = dropdown.options[dropdown.selectedIndex].text;
-                var label = document.getElementById("lecturesLabel");
-                var selectedLectureSpan = document.getElementById("selectedLecture");
-                // If the selected option is not the placeholder
-                var chatInput = document.getElementById("chat-input");
-                if(dropdown.selectedIndex > 0) {
-                    label.style.display = "none"; // Hide the "LECTURES" text
-                    selectedLectureSpan.textContent = selectedText; // Set the selected text
-                    selectedLectureSpan.style.display = "block"; // Show the selected text
-                    chatInput.disabled = false;
-                } else {
-                    label.style.display = "block"; // Show the "LECTURES" text
-                    selectedLectureSpan.style.display = "none"; // Hide the selected text
-                    chatInput.disabled = false;
-                }
-                fetch('/lecture_chatbot', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ lecture: selectedOption })
-                })
-                .then(response => response.text())
-                .then(data => {
-                    console.log('Success:', data);
-                })
-                .catch((error) => {
-                    console.error('Error:', error);
-                });
             }
             function displayMessage(message, sender) {
                 var chatMessagesContainer = document.getElementById('chat-messages-container');
@@ -207,7 +139,7 @@
                 document.getElementById('chat-input').value = ''; // Clear the input right after sending the message
                 displayLoading(true); // Show loader
                 
-                fetch('/chatbot', {
+                fetch('/uploaded_chatbot', {
                     method: 'POST',
                     body: JSON.stringify({ message: userInput }),
                     headers: {
